Fix T80993: Crash duplicating inactive workspace

We need to check for the property editor's runtime struct
before duplicating it.